# CryptoCompress

./: CMakeLists.txt  README.md  main.cpp
lib/brotli/: brotli_wrapper.h
lib/include/: Controller.h  FileWrapper.h
lib/include/commands/: Decrypt.h  Encrypt.h
lib/src/: Controller.cpp  FileWrapper.cpp
lib/src/commands/: Decrypt.cpp  Encrypt.cpp
sampleFiles/: decryptedProject.txt  encryptedProject.txt  key.txt  testE.txt  vitaminsCompressed.txt  vitaminsDecompressed.txt  vitaminsEncrypted.txt  vitaminsKey.txt
